# the-search-thing

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Todo.md  api.py  file_types.json  future_impl.md  helix.toml  main.py  notes.md  pyproject.toml  search.py
.github/workflows/: release-drafter.yml
backend/: __init__.py  app.py  search.py
backend/indexer/: __init__.py  file_indexer.py  image_indexer.py  indexer.py
backend/services/: indexing.py  search.py
backend/utils/: __init__.py  clients.py  content_hash.py
client/: electron-builder.yml  package-lock.json  package.json
client-new/app/: app.tsx
client-new/app/components/: Footer.tsx
client-new/app/home/: Home.tsx  styles.css
client-new/lib/main/: app.ts
client/app/: AppContext.tsx  app.tsx  index.d.ts  index.html  renderer.tsx
client/scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh  stage-sidecar.cjs
db/: queries.hx  schema.hx
docs/: native-ipc-and-gpui.md
electron/: forge.config.ts  tsconfig.json
electron-react-app-main/app/: app.tsx
electron/src/: index.ts  preload.ts  renderer.ts  settings.html
gpui-port/: Cargo.toml
gpui-port/src/: main.rs
indexer/: file_indexer.py  image_indexer.py  indexer.py
scripts/: main.py
src/: add.rs  file_detector_with_extension.rs  file_detector_with_mimetype.rs  filetype_check.rs  img.rs  index.rs  lib.rs  read_file.rs  vid.rs  walk.rs
testing-rust/: Cargo.toml
tests/: sidecar_jrpc.rs
utils/: __init__.py
website/: package-lock.json  package.json  wrangler.jsonc
website-2/: index.html
(+80 files in other folders)
