[package]
# `name` here is name of the package.
name = "the_search_thing"
# these are good defaults:
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "the_search_thing"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
walkdir = "2.5.0"
rayon = "1.11.0"
file_type = "0.8.11"
image = "0.25.9"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ureq = "2.10.1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.89"
sha2 = "0.10.9"
helix-rs = "0.1.9"

[[bin]]
name = "the-search-thing-sidecar"
path = "src/bin/the-search-thing-sidecar.rs"

[features]
default = ["python"]
python = []
